# ZhuqueGraph

./: README.md
cpp/zhuque_alg/: CMakeLists.txt  README.md
cpp/zhuque_alg/BiHSE/biclique/: CMakeLists.txt
cpp/zhuque_alg/BiHSE/biclique/biGraph/: biGraph.hpp
cpp/zhuque_alg/BiHSE/biclique/run/: run.cpp
cpp/zhuque_alg/BiHSE/biclique/tools/: fastIO.hpp  hopstotchHash.hpp  linearSet.hpp
cpp/zhuque_alg/DefectiveClique/: CMakeLists.txt
cpp/zhuque_alg/DefectiveClique/src/: main.cpp  readme.md
cpp/zhuque_alg/MBC/: 00chess_month#0#101#NODE
cpp/zhuque_alg/RSFPPR/: CMakeLists.txt  graph.h  main.cpp  methods.h
cpp/zhuque_alg/Resistance-Landmark/: CMakeLists.txt  README.md  exp-facebook-landmark.sh  exp-facebook-parameter.sh  exp-facebook.sh  graph.cc  graph.h  main.cc  methods.cc  methods.h
cpp/zhuque_alg/Resistance-Landmark/query/: facebook-node.query  facebook-pair.query
cpp/zhuque_alg/biclique/: CMakeLists.txt
cpp/zhuque_alg/biclique/VLDB17/: BCListPlusPlus.cpp  BCListPlusPlus.h  CMakeLists.txt  avgErr.py  biGraph.hpp  cnt_dblp_sampled_2_5_1e6.txt  expAll.py  getArgs.hpp  gps.cpp  main.cpp  plotError.py  tmp.txt  ttmp.txt
cpp/zhuque_alg/biclique/VLDB17/logs/: 0.5ama.txt  0.5ama88_50000.txt  0.5ama_100000.txt  0.5ama_50000.txt  0.5dblp55_10000.txt  0.5dblp55_1000000.txt  0.5dblp55_50000.txt  0.5git.txt  01ama.txt  01ama88_50000.txt  01dblp55_10000.txt  01dblp55_1000000.txt  01dblp55_50000.txt  11ama_100000.txt  11ama_50000.txt  11dblp55_10000.txt  11dblp55_1000000.txt  11dblp55_50000.txt  actor2.txt  ama.txt  amaAll1e6.txt  ama_1e6_raw.txt  ama_5e5.txt  dblp.txt  dblp1010.txt  dblp33.txt  dblp44.txt  dblp55.txt  dblp88.txt  dblp99.txt  dblpAll1e6_1.txt  dblpAll1e6_10.txt  dblpAll1e6_11.txt  dblpAll1e6_12.txt  dblpAll1e6_13.txt  dblpAll1e6_14.txt  dblpAll1e6_15.txt  dblpAll1e6_2.txt  dblpAll1e6_3.txt  dblpAll1e6_4.txt  (+6 more)
cpp/zhuque_alg/biclique/biClique/: BCListPlusPlus.cpp  BCListPlusPlus.h  BK.cpp  BK.h  bcAndPath.cpp  bcAndPath.h  bcAndPathV5.cpp  bclist.cpp  colorPath.cpp  colorPath.h  colorPathAV5.cpp  colorPathAV5PequalsQ.cpp  colorPathPequalsQ.cpp  colorPathPequalsQ.h  colorPathSpecificPQ.cpp  colorPathSpecificPQ.h  edgePivotSpecificPQ.cpp  edgePivotSpecificPQ.h  fastEdgePivot.cpp  fastEdgePivot.h  pivotAndPath.cpp  pivotAndPath.h  pivotAndPathPequalsQ.cpp  pivotAndPathPequalsQ.h  pivotAndPathSamplev5.cpp  pivotAndPathSamplev5PequalsQ.cpp  rawEdgePivot.cpp  rawEdgePivot.h  turan.cpp  turan.h
cpp/zhuque_alg/biclique/biGraph/: biGraph.hpp
cpp/zhuque_alg/biclique/densestSubgraph/: dinic.h  exactFlowAlgorithm.cpp  exactFlowAlgorithm.h  pqBicliqeDensest.cpp  pqBicliqeDensest.h  rawEdgePivot2.cpp  rawEdgePivot2.h
cpp/zhuque_alg/biclique/runner/: densestSubgraph.h  exactDensestSubgraph.h  run.cpp
cpp/zhuque_alg/biclique/tools/: fastIO.hpp  getArgs.hpp  hopstotchHash.hpp  lazyQueue.hpp  linearSet.hpp
cpp/zhuque_alg/biplex/: CMakeLists.txt
cpp/zhuque_alg/biplex/biGraph/: biGraph.hpp
cpp/zhuque_alg/biplex/run/: run.cpp
cpp/zhuque_alg/biplex/tools/: biGraph.hpp  fastIO.hpp  linearSet.hpp  listLinearHeap.hpp
cpp/zhuque_alg/dpcolor/: CMakeLists.txt  README.md
cpp/zhuque_alg/dpcolor/data/dblp/: s.txt
cpp/zhuque_alg/dpcolor/graph/: graph.hpp
cpp/zhuque_alg/dpcolor/kclique/: bruteForce.hpp  ccParallel.hpp  ccpath.hpp  ccpathParallel.hpp  pivoterMsk.hpp
cpp/zhuque_alg/dpcolor/kclique/sample/: cc.h  ccParallel.h  cccpath.h  cccpathParallel.h  cccpathParallel2.h  ccpath.h  ccpathParallel.h  sampleBasedOnColors.h  shadow.h
cpp/zhuque_alg/dpcolor/runner/: changeToD.cpp  makeCSR.cpp  makeTxt.cpp  run.cpp  runPivoter.cpp  sortData.cpp  tmp.cpp
cpp/zhuque_alg/dpcolor/tools/: fastIO.hpp  getArgs.hpp  hopstotchHash.hpp  linearList.hpp  linearSet.hpp  listLinearHeap.hpp
cpp/zhuque_alg/fairnessclique/: CMakeLists.txt  LinearHeap.h  README.md  RelativeFair.cpp  baseline.cpp  example.txt  example2.txt  fairnessclique.cpp  filter.cpp  test.py
cpp/zhuque_alg/maximalUncertainClique/: CMakeLists.txt  algorithms.h  main.cpp
cpp/zhuque_alg/pvr/: CMakeLists.txt  Graph.h  README.md  Random.h  different_power_iterations.sh  example.cpp  exp-youtube_u.sh  exp.sh  main.cpp  ppr.h
cpp/zhuque_alg/pvr/dataset/: youtube_u.query
docs/: ANALYTICS_README.md  HFAGNN_README.md  PSG_README.md  RL_README.md  scGraph_README.md
launch/LSCTrain/: LSCTrain.py  LSC_utils.py  requirements.txt
launch/psg/: PSGNNTrain.py
launch/scGraph/: dataset.py  gen_data.py  scGraphTrain.py
launch/zhuqueSages/: gs_sages.py  link_prediction_sages.py  planetoid.py  sagesNodeClassificationTrain.py  sages_clustering.py  test_node_embed.py  tsne_visual.py
rl/algorithm/: __init__.py  base.py  q_learning.py  render.py  render_tools.py  tools.py
rl/environment/battle_model/: senario_battle.py
rl/environment/battle_model/magent/: c_lib.py  gridworld.py  utility.py
zhuque_graph/analytics/: BiHSE.py  Biclique.py  DefectiveClique.py  PVR.py  README.md  RSFPPR.py  Resistance-Landmark.py  biplex.py  dpColor.py  fairnessClique.py  maximalUncertainClique.py
zhuque_graph/analytics/MBC/: 00chess_month#0#101#ADJ  00chess_month#0#101#DS
zhuque_graph/nn/pytorch/core/: launcher.py  trainer.py
zhuque_graph/nn/pytorch/layer/: hybrid_block.py
zhuque_graph/nn/pytorch/model/: ClusterGcnModel.py  HFAGNN.py  HomoGNNModel.py  LinkPredictionWgGNNModel.py  NodeClassificationWgGNNModel.py  PSGmodel.py  sages_nn.py  scGraphmodel.py
zhuque_graph/nn/tensorflow/layer/: AdClusterGCNLayer.py  blocks.py  modules.py
zhuque_graph/nn/tensorflow/model/: AdClusterGCNModel.py  GCrpNetwork.py  GCrpNetworkTiny.py  (+1 more)
zhuque_graph/preprocess/: __init__.py  sages_gsgae_preprocess.py
zhuque_graph/sampler/: sages_fastgae_sampling.py  sages_gs_sampler.py  sages_saint_sampler.py
zhuque_graph/utils/: AdClusterGCN_utils.py  hfagnn_smiles_trans.py  icsgnn_community.py  icsgnn_dgl_utils.py  icsgnn_pre_community.py  icsgnn_subgraph.py  psg_sample_utils.py  rl_np_utils.py  rl_sonnet_utils.py  rl_tf_utils.py  sages_utils.py  scGraph_scheduler.py
zhuque_graph/visualization/: zhuque_tensorboard.py  zhuque_visdom.py
(+9 files in other folders)
