cmake_minimum_required(VERSION 3.9.0)
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_C_COMPILER "gcc")

project ("zhuque_alg")
add_subdirectory(biclique)
add_subdirectory(biplex)
add_subdirectory(BiHSE/biclique)
add_subdirectory(dpcolor)
add_subdirectory(fairnessclique)
add_subdirectory(maximalUncertainClique)
add_subdirectory(pvr)
add_subdirectory(DefectiveClique)
add_subdirectory(Resistance-Landmark)
add_subdirectory(RSFPPR)
#add_subdirectory(../lib/pybind11)
#find_package(pybind11 REQUIRED)
set(CMAKE_BUILD_TYPE Release)