cmake_minimum_required (VERSION 3.8)
set( CMAKE_CXX_COMPILER "g++" )
set( CMAKE_C_COMPILER "gcc" )

include_directories(../lib/SFMT-src-1.4.1/)
find_package(pybind11 REQUIRED)
set(SOURCE_FILES "main.cpp" "SFMT.c")
pybind11_add_module(rsf ${SOURCE_FILES})
target_compile_options(rsf PUBLIC -O3)
target_compile_options(rsf PUBLIC -march=core2)
target_compile_options(rsf PUBLIC -ffast-math)
target_compile_options(rsf PUBLIC -use_fast_math)
target_compile_options(rsf PUBLIC -DSFMT_MEXP=607)
target_compile_options(rsf PUBLIC -pthread)