cmake_minimum_required (VERSION 3.8)
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_C_COMPILER "gcc")
include_directories(graph)
include_directories(kclique)
include_directories(runner)
include_directories(tools)
find_package(OpenMP REQUIRED)
find_package(pybind11 REQUIRED)
set(SOURCE_FILES runner/run.cpp)
pybind11_add_module(dpcolor ${SOURCE_FILES})

target_link_libraries(dpcolor PUBLIC "-fopenmp" "-lgomp")

target_compile_options(dpcolor PUBLIC -O3)
target_compile_options(dpcolor PUBLIC -g)
target_compile_options(dpcolor PUBLIC -Wall)
target_compile_options(dpcolor PUBLIC -march=native)
target_compile_options(dpcolor PUBLIC -fopenmp)
