cmake_minimum_required (VERSION 3.8)
set( CMAKE_CXX_COMPILER "g++" )
set( CMAKE_C_COMPILER "gcc" )
find_package(pybind11 REQUIRED)
include_directories(../lib/SFMT-src-1.4.1/)
set(SOURCE_FILES "main.cpp" "SFMT.c")
pybind11_add_module(TopPPR ${SOURCE_FILES})
target_compile_options(TopPPR PUBLIC -O3)
target_compile_options(TopPPR PUBLIC -march=core2)
target_compile_options(TopPPR PUBLIC -ffast-math)
target_compile_options(TopPPR PUBLIC -use_fast_math)
target_compile_options(TopPPR PUBLIC -DSFMT_MEXP=607)
target_compile_options(TopPPR PUBLIC -pthread)
#switch the ver in DEV or Release, 
set(CMAKE_BUILD_TYPE Release)